src/components/header/Header.module.css
.header {
  display: flex;
  position: fixed;
  z-index: 100;
  width: 100%;
  background: #425348;
  justify-content: space-between;
  align-items: center;
}

.logo {
  width: 6rem;
}

.logo img {
  width: 100%;
}

.bookBtn {
  min-width: 30px;
}

.button {
  color: #f9f9f9;
  background-color: #425348;
  border: none;
  padding: 1rem;
  border-radius: 4px;
  cursor: pointer;
  border: 1px solid #c6b27e;
}

@media screen and (max-width: 480px) {
  .logo {
    width: 4rem;
  }

  .button {
    display: none;
  }
}

